--- a/index.html
+++ b/index.html
@@ -62,4 +62,25 @@
   </div>
   <div class="slide">
     <img src="image5.jpg" alt="Foto 5">
-    <div class="text">Bin
+    <div class="text">Bingung apalagi ya? langsung ke intinya ya...</div>
+  </div>
+  <div class="slide">
+    <div class="text" style="font-size: 1.2em; max-width: 700px;">
+      Selamat ulang tahun, beban. Semoga kamu selalu sehat, bahagia, sukses, dan beruntung dalam hidupmu. Semoga kamu selalu mendapatkan yang terbaik dari Allah. Semoga kamu selalu bisa mewujudkan mimpi-mimpimu. Aku sangat bangga dan bahagia menjadi pacarmu. Aku sangat mencintai dan menghargaimu. Aku sangat mendukung dan mengapresiasimu. Aku harap kita bisa terus bersama dan saling membantu dalam mencapai tujuan kita. I LOVE YOU, bebannn.
+    </div>
+  </div>
+
+  <script>
+    let slides = document.querySelectorAll('.slide');
+    let index = 0;
+    function showNextSlide() {
+      if (index < slides.length - 1) {
+        slides[index].style.display = 'none';
+        index++;
+        slides[index].style.display = 'flex';
+      }
+    }
+    setInterval(showNextSlide, 5000); // setiap 5 detik
+  </script>
+</body>
+</html>
