--- a/index.html
+++ b/index.html
@@ -71,16 +71,19 @@
   </div>
 
   <script>
-    let slides = document.querySelectorAll('.slide');
-    let index = 0;
-    function showNextSlide() {
-      if (index < slides.length - 1) {
-        slides[index].style.display = 'none';
-        index++;
-        slides[index].style.display = 'flex';
+    document.addEventListener("DOMContentLoaded", function() {
+      let slides = document.querySelectorAll('.slide');
+      let index = 0;
+      function showNextSlide() {
+        if (index < slides.length - 1) {
+          slides[index].style.display = 'none';
+          index++;
+          slides[index].style.display = 'flex';
+        }
       }
-    }
-    setInterval(showNextSlide, 5000); // setiap 5 detik
+      setInterval(showNextSlide, 5000); // setiap 5 detik
+    });
   </script>
+
 </body>
 </html>
