--- a/index.html
+++ b/index.html
@@ -7,21 +7,12 @@
   <style>
     body {
       margin: 0;
-    font-family: 'Segoe UI', sans-serif;
-    background: linear-gradient(to bottom, #ffc0cb, #ffe6f0); /* gradasi pink */
-    color: #4a0033;
-    overflow: hidden;
-    position: relative;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to bottom, #ffc0cb, #ffe6f0); /* pink gradasi */
+      color: #4a0033;
+      overflow: hidden;
+      position: relative;
     }
-    .decor {
-    position: absolute;
-    z-index: 0;
-    width: 100px;
-    opacity: 0.5;
-    }
-    .ballon1 { top: 10px; left: 10px; }
-    .ballon2 { top: 10px; right: 10px; }
-    .cake { bottom: 10px; left: 50%; transform: translateX(-50%); width: 150px; }
     .slide {
       display: none;
       flex-direction: column;
@@ -31,12 +22,14 @@
       text-align: center;
       padding: 20px;
       animation: fade 2s ease-in-out;
+      z-index: 2;
+      position: relative;
     }
     .slide img {
       max-width: 90%;
       max-height: 60vh;
       border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(255,255,255,0.2);
+      box-shadow: 0 10px 30px rgba(255, 105, 180, 0.5);
     }
     .text {
       font-size: 1.5em;
@@ -46,18 +39,46 @@
       from {opacity: 0;}
       to {opacity: 1;}
     }
+
+    .decor {
+      position: absolute;
+      z-index: 0;
+      width: 100px;
+      opacity: 0.5;
+    }
+    .ballon1 { top: 10px; left: 10px; }
+    .ballon2 { top: 10px; right: 10px; }
+    .cake { bottom: 10px; left: 50%; transform: translateX(-50%); width: 150px; }
+
+    button#playMusic {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      z-index: 10;
+      background: #ff8fb3;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 10px;
+      font-weight: bold;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-  <audio id="bg-music" autoplay loop>
-    <source src="https://mutoo31.github.io/hbdimel/BestPart.mp3" type="audio/mp3" />
-  </audio>
 
-
+  <!-- Dekorasi -->
   <img src="https://cdn-icons-png.flaticon.com/512/3468/3468375.png" class="decor ballon1" />
   <img src="https://cdn-icons-png.flaticon.com/512/3468/3468375.png" class="decor ballon2" />
   <img src="https://cdn-icons-png.flaticon.com/512/3534/3534032.png" class="decor cake" />
 
+  <!-- Musik -->
+  <audio id="bg-music" loop>
+    <source src="BestPart.mp3" type="audio/mp3" />
+    Browser-mu tidak mendukung audio.
+  </audio>
+  <button id="playMusic" onclick="document.getElementById('bg-music').play()">🎵 Putar Musik</button>
+
+  <!-- Slide Foto dan Kata -->
   <div class="slide" style="display:flex;">
     <img src="image1.jpg" alt="Foto 1">
     <div class="text">Senyummu adalah bahagiaku</div>
@@ -98,6 +119,5 @@
       setInterval(showNextSlide, 5000); // setiap 5 detik
     });
   </script>
-
 </body>
 </html>
