--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <!-- Musik -->
   <audio id="bg-music" loop>
-    <source src="BestPart.mp3" type="audio/mp3" />
+    <source src="H.E.R. - Best Part (Lyrics) Ft. Daniel Caesar" type="audio/mp3" />
     Browser-mu tidak mendukung audio.
   </audio>
   <button id="playMusic" onclick="document.getElementById('bg-music').play()">🎵 Putar Musik</button>
