--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
   <img src="https://cdn-icons-png.flaticon.com/512/3534/3534032.png" class="decor cake" />
 
   <!-- Musik -->
-  <audio id="bg-music" loop>
-    <source src="H.E.R. - Best Part (Lyrics) Ft. Daniel Caesar" type="audio/mp3" />
-    Browser-mu tidak mendukung audio.
+  <audio id="bg-music" autoplay loop>
+    <source src="https://mutoo31.github.io/hbdimel/BestPart.mp3" type="audio/mp3" />
   </audio>
+
   <button id="playMusic" onclick="document.getElementById('bg-music').play()">🎵 Putar Musik</button>
 
   <!-- Slide Foto dan Kata -->
